<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author 
 * @modified by Sarah Joyce
 * @date:26/04/2012
 * @info: layout for level difficulty in tests
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<!-- HEADER CONTENT AREA -->

	<LinearLayout style="@style/header_content_layout" >

		<TextView
			style="@style/header_text"
			android:text="@string/tests" />
	</LinearLayout>

	<!-- MAIN CONTENT AREA -->

	<LinearLayout style="@style/main_content_layout" >

		<TextView
			android:id="@+id/selectlevel"
			style="@style/lable_text"
			android:text="@string/sel_difficulty" />
		<!-- SELECT LEVEL 1 -->

		<Button
			android:id="@+id/level1"
			style="@style/menu_btn"
			android:text="@string/begin_1" />
		<!-- SELECT LEVEL 2 -->

		<Button
			android:id="@+id/level2"
			style="@style/menu_btn"
			android:text="@string/inter_2" />
		<!-- SELECT LEVEL 3 -->

		<Button
			android:id="@+id/level3"
			style="@style/menu_btn"
			android:text="@string/adv_3" />
	</LinearLayout>

</LinearLayout>