<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<LinearLayout style="@style/header_layout" >

		<TextView
			style="@style/title_header_text"
			android:text="@string/create_prof" />
	</LinearLayout>

	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout style="@style/main_content" >

			<TextView
				style="@style/header_text"
				android:text="@string/username" />

			<EditText
				android:id="@+id/create_username"
				style="@style/fwidth_editbox"
				android:inputType="text" />

			<TextView
				style="@style/header_text"
				android:text="@string/password" />

			<EditText
				android:id="@+id/create_password"
				style="@style/fwidth_editbox"
				android:inputType="textPassword" />

			<TextView
				style="@style/header_text"
				android:text="@string/c_password" />

			<EditText
				android:id="@+id/confirm_password"
				style="@style/fwidth_editbox"
				android:inputType="textPassword" />

			<TextView
				style="@style/header_text"
				android:text="@string/s_question" />

			<EditText
				android:id="@+id/create_sq"
				style="@style/fwidth_editbox"
				android:inputType="text" />

			<TextView
				style="@style/header_text"
				android:text="@string/s_answer" />

			<EditText
				android:id="@+id/create_sa"
				style="@style/fwidth_editbox"
				android:inputType="text" />

			<Button
				android:id="@+id/create_profile_button"
				style="@style/normal_btn"
				android:text="@string/create_prof" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>