<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<LinearLayout style="@style/header_content_layout" >

		<TextView
			style="@style/title_header_text"
			android:text="@string/chng_secrets" />
	</LinearLayout>

	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout style="@style/main_content_layout" >

			<TextView
				style="@style/header_text"
				android:text="@string/password" />

			<EditText
				android:id="@+id/editText1"
				style="@style/fwidth_editbox"
				android:inputType="textPassword" />

			<TextView
				style="@style/header_text"
				android:text="@string/new_s_question" />

			<EditText
				android:id="@+id/editText2"
				style="@style/fwidth_editbox"
				android:inputType="text" />

			<TextView
				style="@style/header_text"
				android:text="@string/new_s_answer" />

			<EditText
				android:id="@+id/editText3"
				style="@style/fwidth_editbox"
				android:inputType="text" />

			<Button
				android:id="@+id/confirm_replace_password"
				style="@style/normal_btn"
				android:text="@string/confirm" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>