<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author 
 * @modified by Sarah Joyce
 * @date:20/04/2012
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/title_text"
        android:text="@string/test_res" />

    <LinearLayout style="@style/main_content" >

        <TextView
            android:id="@+id/test_score_head"
            style="@style/header_text"
            android:text="@string/test_score" />

        <TextView
            android:id="@+id/test_score"
            style="@style/header_text" />

        <TextView
            android:id="@+id/rank_awarded_head"
            android:text="@string/rank_awarded"
            style="@style/header_text" />

        <TextView
            android:id="@+id/rank_awarded"
            style="@style/header_text" />

        <Button
            android:id="@+id/review_test"
            style="@style/normal_btn"
            android:text="@string/review_test" />
    </LinearLayout>

</LinearLayout>