<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author 
 * @modified by Sarah Joyce
 * @date:26/04/2012
 * @info: Layout for screen when a tutorial has been completed
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<!-- HEADER CONTENT AREA -->

	<TextView
		style="@style/header_text"
		android:text="@string/tutorial_comp"
		android:textSize="35sp" />

	<!-- MAIN CONTENT AREA -->

	<RelativeLayout style="@style/main_content_layout" >

		<TextView
			android:id="@+id/textView1"
			style="@style/center_text"
			android:text="@string/review_topic"
			android:textSize="25sp" />

		<!-- YES/NO BUTTONS TO CONTINUE TO REVIEW -->

		<Button
			android:id="@+id/tutorial_review_yes"
			style="@style/y_n_btn"
			android:layout_centerVertical="true"
			android:background="@drawable/green_button"
			android:text="@string/answer_yes" />

		<Button
			android:id="@+id/tutorial_review_no"
			style="@style/y_n_btn"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:text="@string/answer_no" />
	</RelativeLayout>

</LinearLayout>