<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<LinearLayout style="@style/header_content_layout" >

		<TextView
			style="@style/title_header_text"
			android:text="@string/prof_optns" />
	</LinearLayout>

	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout style="@style/main_content_layout" >

			<TextView
				android:id="@+id/textQuestion1"
				style="@style/header_text" />

			<EditText
				android:id="@+id/intextanswer"
				style="@style/fwidth_editbox"
				android:inputType="text" />

			<TextView
				style="@style/header_text"
				android:text="@string/new_pass" />

			<EditText
				android:id="@+id/intextpass"
				style="@style/fwidth_editbox"
				android:inputType="textPassword" />

			<TextView
				style="@style/header_text"
				android:text="@string/c_password" />

			<EditText
				android:id="@+id/intextconfirmpass1"
				style="@style/fwidth_editbox"
				android:inputType="textPassword" />

			<Button
				android:id="@+id/donebutton"
				style="@style/normal_btn"
				android:text="@string/confirm" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>