<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author 
 * @modified by Sarah Joyce
 * @date:26/04/2012
 * @info: layout for reviewing a word on screen
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<!-- android:weightSum="1.0" > -->


	<!-- HEADER CONTENT AREA -->

	<LinearLayout style="@style/header_content_layout" >

		<TextView
			style="@style/header_text"
			android:text="@string/review" />
	</LinearLayout>

	<!-- MAIN CONTENT AREA -->

	<LinearLayout style="@style/main_content_layout" >

		<!-- ENGLISH WORD -->

		<TextView
			android:id="@+id/review_srctext"
			style="@style/center_text"
			android:layout_weight="0.40"
			android:text="@string/placeholder_src" />

		<!-- SPANISH WORD -->

		<TextView
			android:id="@+id/review_dsttext"
			style="@style/center_text"
			android:layout_weight="0.30"
			android:text="@string/placeholder_dst_tap" />

		<!-- REVIEW SECTION -->

		<LinearLayout
			android:id="@+id/review_item_bottom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<RatingBar
				android:id="@+id/review_item_rating"
				style="@style/rate_bar" />

			<Button
				android:id="@+id/review_item_nextbutton"
				style="@style/normal_btn"
				android:text="@string/next" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>