<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author 
 * @modified by Sarah Joyce
 * @date:26/04/2012
 * @info: layout for options
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<!-- HEADER CONTENT AREA -->

	<LinearLayout style="@style/header_content_layout" >

		<TextView
			style="@style/header_text"
			android:text="@string/prof_optns" />
	</LinearLayout>

	<!-- MAIN CONTENT AREA -->

	<LinearLayout style="@style/main_content_layout" >

		<!-- CHANGE PASSWORD -->

		<Button
			android:id="@+id/passwordbutton"
			style="@style/menu_btn"
			android:text="@string/chng_password" />

		<!-- REPLACEMENT CONFIRMATION -->

		<Button
			android:id="@+id/qabutton"
			style="@style/menu_btn"
			android:text="@string/chng_secrets" />
	</LinearLayout>

</LinearLayout>