<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author 
 * @modified by Sarah Joyce
 * @date:26/04/2012
 * @info: Layout for start page of review
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<!-- HEADER CONTENT AREA -->

	<LinearLayout style="@style/header_content_layout" >

		<TextView
			style="@style/header_text"
			android:text="@string/review" />
	</LinearLayout>

	<!-- MAIN CONTENT AREA -->

	<LinearLayout style="@style/main_content_layout" >

		<TextView
			android:id="@+id/review_start_text"
			style="@style/center_text"
			android:layout_width="match_parent"
			android:layout_weight="1"
			android:text="@string/placeholder_itemsreview" />

		<Button
			android:id="@+id/review_start_button"
			style="@style/normal_btn"
			android:text="@string/begin" />

	</LinearLayout>

</LinearLayout>